log/build_2025-04-12_18-32-34/robina_rfid/stderr.log
  File "/home/peko/colcon_ws/install/robina_rfid/lib/python3.12/site-packages/robina_rfid/point_follower.py", line 1
    kimport rclpy
            ^^^^^
SyntaxError: invalid syntax

